--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
- background-color: hsla(14, 100%, 53%, 0.6);;
+ background-color: hsla(14, 100%, 53%, 0.6);
 }
 /* every box is this size */
 
